rex.audio fix logo spacing

--- a/src/ui/Pages/Home/home.module.scss
+++ b/src/ui/Pages/Home/home.module.scss
@@ -14,7 +14,7 @@ $checkerWhite: #703619; /* Matches the rich dark brown of page2 */
 
 .logo {
   width: 160px;
-  margin: 0 auto;
+  margin: 0 auto 20px auto;
 
   img {
     text-align: center;
